--- a/package.json
+++ b/package.json
@@ -1,18 +1,30 @@
 {
-  "name": "linfo1212-pf11",
+  "name": "projet-final",
   "version": "1.0.0",
-  "description": "",
+  "description": "Files of final projet for LINFO1212",
   "main": "index.js",
-  "scripts": {},
-  "author": "",
+  "jest": {
+    "globals": {
+      "__DEV__": true
+    },
+    "verbose": true
+  },
+  "scripts": {
+    "test": "jest"
+  },
+  "author": "PF11",
   "license": "ISC",
   "dependencies": {
-    "crypto": "^1.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "jest": "^29.3.1",
     "multer": "^1.4.5-lts.1",
-    "sequelize": "^6.26.0",
-    "sqlite3": "^5.1.2"
+    "sequelize": "^6.25.8",
+    "sqlite3": "^5.1.2",
+    "supertest": "^6.3.3"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.20.2"
   }
 }
